5 June 2007: Wouter
	- iterator state finished.
	- subrequests without parent store in cache and stop.
	- worker slumber list for ongoing promiscuous queries.
	- subrequest error handling.
	- priming failure returns SERVFAIL.
	- priming gives LAME result, returns SERVFAIL.
	- debug routine to print dns_msg as handled by iterator.
	- memleak in config file stubs fixup.

4 June 2007: Wouter
	- random selection of equally preferred nameserver targets.
	- reply info copy routine. Reuses existing code.
	- cache lameness in response handling.
	- do not touch qstate after worker_process_query because it may have
	  been deleted by that routine.
	- Prime response state.
	- Process target response state.
	- some memcmp changed to dname_compare for case preservation.

1 June 2007: Wouter
	- normalize incoming messages. Like unbound-java, with CNAME chain
	  checked, DNAME checked, CNAME's synthesized, glue checked.
	- sanitize incoming messages.
	- split msgreply encode functions into own file msgencode.c.
	- msg_parse to queryinfo/replyinfo conversion more versatile.
	- process_response, classify response, delegpt_from_message. 

31 May 2007: Wouter
	- querytargets state.
	- dname_subdomain_c() routine.
	- server selection, based on RTT. ip6 is filtered out if not available,
	  and lameness is checked too.
	- delegation point copy routine.

30 May 2007: Wouter
	- removed FLAG_CD from message and rrset caches. This was useful for
	  an agnostic forwarder, but not for a sophisticated (trust value per
	  rrset enabled) cache.
	- iterator reponse typing.
	- iterator cname handle.
	- iterator prime start.
	- subquery work.
	- processInitRequest and processInitRequest2.
	- cache synthesizes referral messages, with DS and NSEC.
	- processInitRequest3.
	- if a request creates multiple subrequests these are all activated.

29 May 2007: Wouter
	- routines to lock and unlock array of rrsets moved to cache/rrset.
	- lookup message from msg cache (and copy to region).